fix(FEC-8960): need to tap on Play button more than one time in order to start playback on iOS (#363)

--- a/src/components/pre-playback-play-overlay/_pre-playback-play-overlay.scss
+++ b/src/components/pre-playback-play-overlay/_pre-playback-play-overlay.scss
@@ -25,7 +25,7 @@
 
     &:active {
       opacity: 0.7;
-      transform: scale(1);
+      transform: scale(1) translate(-50%, -50%);
     }
   }
 }
